# stepproof

./: .gitignore  .mcp.json  CONTRIBUTING.md  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
.ike/: ike.json
.ike/completed/: TASK-0005 - phase-2a-mcp-stepproof-keep-me-honest-tool.md  (+2 more)
.lighthouse/: config.yaml
.stepproof/: config.yaml
.stepproof.pre-init-backup/: config.yaml
.visionlog/: config.yaml  vision.md
challenges/: README.md
charts/: README.md
chats/: 2026-04-20-verification-agent-pattern.md  README.md
docs/: ADAPTER_BRIDGE.md  ARCHITECTURE.md  BOOTSTRAP_CONSTRAINT.md  CASE_STUDY_GREENMARK.md  CEREMONY_DB_MIGRATION.md  DEPLOY_TO_YOUR_PROJECT.md  DOGFOODING.md  HONEST_LIMITS.md  HOOKS.md  KEEP_ME_HONEST.md  LESSONS_FROM_HOOKS_MASTERY.md  OPEN_QUESTIONS.md  OWASP_MAPPING.md  PHILOSOPHY.md  POLICY.md  POSITIONING.md  PRIOR_ART.md  PRIOR_ART_DEEPER.md  PROJECT_STATE.md  ROADMAP.md  RUNBOOKS.md  RUNBOOK_MODEL.md  RUNTIME_HANDSHAKE.md  RUN_A_CEREMONY.md  THE_GAP.md  TIERS.md  VERIFICATION_MATRIX.md  VERIFIERS.md
docs/adr/: README.md  (+3 more)
examples/: rb-data-backfill.yaml  rb-db-migration-and-deploy.yaml  rb-dep-upgrade.yaml  rb-fleetio-connector-deploy.yaml  rb-hotfix-prod.yaml  rb-migration-deploy-mvp.yaml  rb-pr-review-and-merge.yaml  rb-repo-simple.yaml  rb-rollback-prod.yaml  rb-secret-rotation.yaml  rb-stepproof-dev.yaml  rb-stepproof-release.yaml
schemas/: runbook.schema.json
scripts/: e2e_blind_trap.py  e2e_bypass.py  e2e_complex_1.py  e2e_complex_2.py  e2e_greenmark.py  e2e_level4.py  e2e_smoke.py  e2e_smoke_2.py
(+81 files in other folders)
