[project]
name = "stepproof"
version = "0.1.0"
description = "StepProof — verification-aware governance layer for agentic execution"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BUSL-1.1" }
authors = [{ name = "Eidos AGI", email = "daniel@eidosagi.com" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.uv.workspace]
members = [
    "packages/stepproof-runtime",
    "packages/stepproof-mcp",
    "packages/stepproof-cc-adapter",
    "packages/stepproof-state",
]

[tool.uv.sources]
stepproof-runtime = { workspace = true }
stepproof-mcp = { workspace = true }
stepproof-cc-adapter = { workspace = true }
stepproof-state = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
